# minigames

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  README.md  build.gradle.kts  detekt.yml  gradle.properties  modules.sh  settings.gradle.kts
devtools/: build.gradle.kts
game/: build.gradle.kts
lobby/: build.gradle.kts
main-lobby/: build.gradle.kts
minigames/duels-modern-lobby/: build.gradle.kts
minigames/hunger-games/: build.gradle.kts
minigames/hunger-games-lobby/: build.gradle.kts
minigames/hunger-games-shared/: build.gradle.kts
ml-service/: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
ml-service/gateway/: server.py
ml-service/models/: embeddings.py  loader.py  mock.py
ml-service/pipeline/: __init__.py  orchestrator.py  prompts.py  schemas.py  stage1_insights.py  stage2_topics.py  stage3_classify.py
ml-service/scripts/: smoke_distributed.sh  smoke_local.py
ml-service/training/: data_templates.py  dpo_train.py  eval.py  sft_train.py
ml-service/training/data/: README.md  categories.jsonl  insights.jsonl  sample_houses.jsonl  topics.jsonl
ml-service/workers/: base.py  stage1_worker.py  stage2_worker.py  stage3_worker.py
persistentgames/housing/: build.gradle.kts
persistentgames/prison/: build.gradle.kts
public-api/pubapi-akers/: build.gradle.kts
public-api/pubapi-pigdi/: build.gradle.kts
rnd/pvpclasses/: PvPClass.java  PvPClassHandler.java  PvPClasses.kt
services/application/: build.gradle.kts
services/hosted-world-gateway/: build.gradle.kts
shared/: build.gradle.kts
(+892 files in other folders)
